Removed unwanted code